5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1764_1576.log
== TEST (2019-05-21 16:26:12) 
-- CODE:
from numpy import *
notas = array([1,4,3,7,8])
print(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:27:19) 
-- CODE:
from numpy import *
notas = array(1,4,3,7,8)
print(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:28:06) 
-- CODE:
from numpy import *
notas = array([1,4,3,7,8])
print(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:11:32) 
-- CODE:
from numpy import *
e = array(eval(input("Digite as jogadas de Eusapia: ")))
b = array(eval(input("Digite a jogadas de Barsanulfo? ")))
i = 0 # contador da posicao do vetor
es = 0 #vitorias de Eusapia
br = 0 #vitorias de Barsanulfo
em = 0 #empates
while(i < len(e)):
	if((es == 11 and br == 11) or (es == 22 and br == 22) or (es == 33 and br == 33)):
		em = em +1
	elif((es == 11 and br == 33) or (es == 22 and br == 11) or (es == 33 and b == 22):
		es = es+1
	else:	
		br = br+1
	i = i+1
print(len(e))

if(es>br):
	print("EUSAPIA")
elif(br>es):
	print("BARSANULFO")
else:
	print("EMPATE")		  
		  
		
	
-- ERROR:
File "XXXX", line 11
    elif((es == 11 and br == 33) or (es == 22 and br == 11) or (es == 33 and b == 22):
                                                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:12:02) 
-- CODE:
from numpy import *
e = array(eval(input("Digite as jogadas de Eusapia: ")))
b = array(eval(input("Digite a jogadas de Barsanulfo? ")))
i = 0 # contador da posicao do vetor
es = 0 #vitorias de Eusapia
br = 0 #vitorias de Barsanulfo
em = 0 #empates
while(i < len(e)):
	if((es == 11 and br == 11) or (es == 22 and br == 22) or (es == 33 and br == 33)):
		em = em +1
	elif((es == 11 and br == 33) or (es == 22 and br == 11) or (es == 33 and b == 22)):
		es = es+1
	else:	
		br = br+1
	i = i+1
print(len(e))

if(es>br):
	print("EUSAPIA")
elif(br>es):
	print("BARSANULFO")
else:
	print("EMPATE")		  
		  
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:14:31) 
-- CODE:
from numpy import *
e = array(eval(input("Digite as jogadas de Eusapia: ")))
b = array(eval(input("Digite a jogadas de Barsanulfo: ")))
i = 0 # contador da posicao do vetor
es = 0 #vitorias de Eusapia
br = 0 #vitorias de Barsanulfo
em = 0 #empates
while(i < len(e)):
	if((e == 11 and b == 11) or (e == 22 and b == 22) or (e == 33 and b == 33)):
		em = em + 1
	elif((e == 11 and b == 33) or (e == 22 and b == 11) or (e == 33 and b == 22)):
		es = es+1
	else:	
		br = br+1
	i = i+1
print(len(e))

if(es>br):
	print("EUSAPIA")
elif(br>es):
	print("BARSANULFO")
else:
	print("EMPATE")		  
		  
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:14:45) 
-- CODE:
from numpy import *
e = array(eval(input("Digite as jogadas de Eusapia: ")))
b = array(eval(input("Digite a jogadas de Barsanulfo: ")))
i = 0 # contador da posicao do vetor
es = 0 #vitorias de Eusapia
br = 0 #vitorias de Barsanulfo
em = 0 #empates
while(i < len(e)):
	if((e == 11 and b == 11) or (e == 22 and b == 22) or (e == 33 and b == 33)):
		em = em + 1
	elif((e == 11 and b == 33) or (e == 22 and b == 11) or (e == 33 and b == 22)):
		es = es+1
	else:	
		br = br+1
	i = i+1
print(len(e))

if(es>br):
	print("EUSAPIA")
elif(br>es):
	print("BARSANULFO")
else:
	print("EMPATE")		  
		  
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:19:58) 
-- CODE:
from numpy import *
e = array(eval(input("Digite as jogadas de Eusapia: ")))
b = array(eval(input("Digite a jogadas de Barsanulfo: ")))
i = 0 # contador da posicao do vetor
es = 0 #vitorias de Eusapia
br = 0 #vitorias de Barsanulfo

while(i < len(e)):
	if(e == 11 and b == 33):
		es = es+1
	if(e == 22 and b == 11):
		es = es+1
	if(e == 33 and b == 22):	
		es = es+1
	if(e == 11 and b == 33):	
	else:
		br = br+1
print(len(e))
if(es>br):
	print("EUSAPIA")
elif(br>es):
	print("BARSANULFO")
else:
	print("EMPATE")		  
		  
		
	
-- ERROR:
File "XXXX", line 16
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:20:20) 
-- CODE:
from numpy import *
e = array(eval(input("Digite as jogadas de Eusapia: ")))
b = array(eval(input("Digite a jogadas de Barsanulfo: ")))
i = 0 # contador da posicao do vetor
es = 0 #vitorias de Eusapia
br = 0 #vitorias de Barsanulfo

while(i < len(e)):
	if(e == 11 and b == 33):
		es = es+1
	if(e == 22 and b == 11):
		es = es+1
	if(e == 33 and b == 22):	
		es = es+1
	if(e == 11 and b == 33):	
	else:
		br = br+1
print(len(e))
if(es>br):
	print("EUSAPIA")
elif(br>es):
	print("BARSANULFO")
elif:
	print("EMPATE")		  
		  
		
	
-- ERROR:
File "XXXX", line 16
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:20:46) 
-- CODE:
from numpy import *
e = array(eval(input("Digite as jogadas de Eusapia: ")))
b = array(eval(input("Digite a jogadas de Barsanulfo: ")))
i = 0 # contador da posicao do vetor
es = 0 #vitorias de Eusapia
br = 0 #vitorias de Barsanulfo

while(i < len(e)):
	if(e == 11 and b == 33):
		es = es+1
	if(e == 22 and b == 11):
		es = es+1
	if(e == 33 and b == 22):	
		es = es+1
	if(e == 11 and b == 33):	
	
print(len(e))
if(es>br):
	print("EUSAPIA")
elif(br>es):
	print("BARSANULFO")
elif:
	print("EMPATE")		  
	
-- ERROR:
File "XXXX", line 17
    print(len(e))
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:21:11) 
-- CODE:
from numpy import *
e = array(eval(input("Digite as jogadas de Eusapia: ")))
b = array(eval(input("Digite a jogadas de Barsanulfo: ")))
i = 0 # contador da posicao do vetor
es = 0 #vitorias de Eusapia
br = 0 #vitorias de Barsanulfo

while(i < len(e)):
	if(e == 11 and b == 33):
		es = es+1
	if(e == 22 and b == 11):
		es = es+1
	if(e == 33 and b == 22):	
		es = es+1
	if(e == 11 and b == 33):	

print(len(e))
if(es>br):
	print("EUSAPIA")
elif(br>es):
	print("BARSANULFO")
elif:
	print("EMPATE")		  
	
-- ERROR:
File "XXXX", line 17
    print(len(e))
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:21:33) 
-- CODE:
from numpy import *
e = array(eval(input("Digite as jogadas de Eusapia: ")))
b = array(eval(input("Digite a jogadas de Barsanulfo: ")))
i = 0 # contador da posicao do vetor
es = 0 #vitorias de Eusapia
br = 0 #vitorias de Barsanulfo

while(i < len(e)):
	if(e == 11 and b == 33):
		es = es+1
	if(e == 22 and b == 11):
		es = es+1
	if(e == 33 and b == 22):	
		es = es+1
	if(e == 11 and b == 33):	
	i = i+1
	
print(len(e))
if(es>br):
	print("EUSAPIA")
elif(br>es):
	print("BARSANULFO")
elif:
	print("EMPATE")		  
	
-- ERROR:
File "XXXX", line 16
    i = i+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:22:11) 
-- CODE:
from numpy import *
e = array(eval(input("Digite as jogadas de Eusapia: ")))
b = array(eval(input("Digite a jogadas de Barsanulfo: ")))
i = 0 # contador da posicao do vetor
es = 0 #vitorias de Eusapia
br = 0 #vitorias de Barsanulfo

while(i < len(e)):
	if(e == 11 and b == 33):
		es = es+1
	elif(e == 22 and b == 11):
		es = es+1
	elif(e == 33 and b == 22):	
		es = es+1
	elif(e == 11 and b == 33):	
	i = i+1
	
print(len(e))
if(es>br):
	print("EUSAPIA")
elif(br>es):
	print("BARSANULFO")
elif:
	print("EMPATE")		  
	
-- ERROR:
File "XXXX", line 16
    i = i+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:22:41) 
-- CODE:
from numpy import *
e = array(eval(input("Digite as jogadas de Eusapia: ")))
b = array(eval(input("Digite a jogadas de Barsanulfo: ")))
i = 0 # contador da posicao do vetor
es = 0 #vitorias de Eusapia
br = 0 #vitorias de Barsanulfo

while(i < len(e)):
	if(e == 11 and b == 33):
		es = es+1
	elif(e == 22 and b == 11):
		es = es+1
	elif(e == 33 and b == 22):	
		es = es+1
	elif(e == 11 and b == 33):
	i = i+1
	
print(len(e))
if(es>br):
	print("EUSAPIA")
elif(br>es):
	print("BARSANULFO")
elif:
	print("EMPATE")		  
	
-- ERROR:
File "XXXX", line 16
    i = i+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:23:26) 
-- CODE:
from numpy import *
e = array(eval(input("Digite as jogadas de Eusapia: ")))
b = array(eval(input("Digite a jogadas de Barsanulfo: ")))
i = 0 # contador da posicao do vetor
es = 0 #vitorias de Eusapia
br = 0 #vitorias de Barsanulfo

while(i < len(e)):
	if(e == 11 and b == 33):
		es = es+1
	elif(e == 22 and b == 11):
		es = es+1
	elif(e == 33 and b == 22):	
		es = es+1
	elif(e == 11 and b == 33):
	i = i+1
	
print(len(e))
if(es>br):
	print("EUSAPIA")
elif(br>es):
	print("BARSANULFO")
elif:
	print("EMPATE")		  
	
-- ERROR:
File "XXXX", line 16
    i = i+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:25:05) 
-- CODE:
from numpy import *
e = array(eval(input("Digite as jogadas de Eusapia: ")))
b = array(eval(input("Digite a jogadas de Barsanulfo: ")))
i = 0 # contador da posicao do vetor
es = 0 #vitorias de Eusapia
br = 0 #vitorias de Barsanulfo

while(i < len(e)):
	if(e == 11 and b == 33):
		es = es+1
	else:
		br = br+1
	i = i+1
	
print(len(e))
if(es>br):
	print("EUSAPIA")
elif(br>es):
	print("BARSANULFO")
elif:
	print("EMPATE")		  
	
-- ERROR:
File "XXXX", line 20
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:25:27) 
-- CODE:
from numpy import *
e = array(eval(input("Digite as jogadas de Eusapia: ")))
b = array(eval(input("Digite a jogadas de Barsanulfo: ")))
i = 0 # contador da posicao do vetor
es = 0 #vitorias de Eusapia
br = 0 #vitorias de Barsanulfo

while(i < len(e)):
	if(e == 11 and b == 33):
		es = es+1
	else:
		br = br+1
	i = i+1
	
print(len(e))
if(es>br):
	print("EUSAPIA")
elif(br>es):
	print("BARSANULFO")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:26:08) 
-- CODE:
from numpy import *
e = array(eval(input("Digite as jogadas de Eusapia: ")))
b = array(eval(input("Digite a jogadas de Barsanulfo: ")))
i = 0 # contador da posicao do vetor
es = 0 #vitorias de Eusapia
br = 0 #vitorias de Barsanulfo

while(i < len(e)):
	if(e == 11 and b == 33):
		es = es+1
	elif(e == 33 and b == 22):	
		es = es+1
	elif(e == 11 and b == 33):
	i = i+1
	
print(len(e))
if(es>br):
	print("EUSAPIA")
elif(br>es):
	print("BARSANULFO")

-- ERROR:
File "XXXX", line 14
    i = i+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:28:26) 
-- CODE:
from numpy import *
e = array(eval(input("Digite as jogadas de Eusapia: ")))
b = array(eval(input("Digite a jogadas de Barsanulfo: ")))
i = 0 # contador da posicao do vetor
es = 0 #vitorias de Eusapia
br = 0 #vitorias de Barsanulfo

while(i < len(e)):
	if(e == 11 and b == 33):
		es = es+1
	if(e == 22 and b == 11):
		es = es+1
	if(e == 33 and b == 22):	
		es = es +1
	i = i+1
	
print(len(e))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:34:50) 
-- CODE:
from numpy import *
e = array(eval(input("Digite as jogadas de Eusapia: ")))
b = array(eval(input("Digite a jogadas de Barsanulfo: ")))
i = 0 # contador da posicao do vetor
es = 0 #vitorias de Eusapia
br = 0 #vitorias de Barsanulfo

while(i < len(e)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		es = es+1
	elif(b[i] == 11 and e[i] == 33) or (b[i] == 22 and e[i] == 11) or (b[i] == 33 and e[i] == 22):
		br = br+1

print(len(e))
if(es>br):
	print("EUSAPIA")
elif(br>es):
	print("BARSANULFO")
else:
	print("EMPATE")
else:
	print("EMPATE")		  
		  
		
	
-- ERROR:
File "XXXX", line 21
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:35:11) 
-- CODE:
from numpy import *
e = array(eval(input("Digite as jogadas de Eusapia: ")))
b = array(eval(input("Digite a jogadas de Barsanulfo: ")))
i = 0 # contador da posicao do vetor
es = 0 #vitorias de Eusapia
br = 0 #vitorias de Barsanulfo

while(i < len(e)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		es = es+1
	elif(b[i] == 11 and e[i] == 33) or (b[i] == 22 and e[i] == 11) or (b[i] == 33 and e[i] == 22):
		br = br+1

print(len(e))
if(es>br):
	print("EUSAPIA")
elif(br>es):
	print("BARSANULFO")
else:
	print("EMPATE")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:35:45) 
-- CODE:
from numpy import *
e = array(eval(input("Digite as jogadas de Eusapia: ")))
b = array(eval(input("Digite a jogadas de Barsanulfo: ")))
i = 0 # contador da posicao do vetor
es = 0 #vitorias de Eusapia
br = 0 #vitorias de Barsanulfo

while(i < len(e)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		es = es+1
	elif(b[i] == 11 and e[i] == 33) or (b[i] == 22 and e[i] == 11) or (b[i] == 33 and e[i] == 22):
		br = br+1
	i = i +1
print(len(e))
if(es>br):
	print("EUSAPIA")
elif(br>es):
	print("BARSANULFO")
else:
	print("EMPATE")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:36:05) 
-- CODE:
from numpy import *
e = array(eval(input("Digite as jogadas de Eusapia: ")))
b = array(eval(input("Digite a jogadas de Barsanulfo: ")))
i = 0 # contador da posicao do vetor
es = 0 #vitorias de Eusapia
br = 0 #vitorias de Barsanulfo

while(i < len(e)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		es = es+1
	elif(b[i] == 11 and e[i] == 33) or (b[i] == 22 and e[i] == 11) or (b[i] == 33 and e[i] == 22):
		br = br+1
	i = i +1
print(len(e))
if(es>br):
	print("EUSAPIA")
elif(br>es):
	print("BARSANULFO")
else:
	print("EMPATE")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:36:29) 
-- CODE:
from numpy import *
e = array(eval(input("Digite as jogadas de Eusapia: ")))
b = array(eval(input("Digite a jogadas de Barsanulfo: ")))
i = 0 # contador da posicao do vetor
es = 0 #vitorias de Eusapia
br = 0 #vitorias de Barsanulfo

while(i < len(e)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		es = es+1
	elif(b[i] == 11 and e[i] == 33) or (b[i] == 22 and e[i] == 11) or (b[i] == 33 and e[i] == 22):
		br = br+1
	i = i +1
print(len(e))
if(es>br):
	print("EUSAPIA")
elif(br>es):
	print("BARSANULFO")
else:
	print("EMPATE")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 17:36:42) 
-- CODE:
from numpy import *
e = array(eval(input("Digite as jogadas de Eusapia: ")))
b = array(eval(input("Digite a jogadas de Barsanulfo: ")))
i = 0 # contador da posicao do vetor
es = 0 #vitorias de Eusapia
br = 0 #vitorias de Barsanulfo

while(i < len(e)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		es = es+1
	elif(b[i] == 11 and e[i] == 33) or (b[i] == 22 and e[i] == 11) or (b[i] == 33 and e[i] == 22):
		br = br+1
	i = i +1
print(len(e))
if(es>br):
	print("EUSAPIA")
elif(br>es):
	print("BARSANULFO")
else:
	print("EMPATE")

-- EXECUTION TIME:
0.586042
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
